--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
     - run: |
         echo ${{ secrets.DOCKER_USERNAME }} | docker login --username ${{ secrets.DOCKER_PWD }} --password-stdin      
         GIT_SHA="$(git rev-parse --short HEAD)"
-        docker image build -f Dockerfile -t laussma/my-first-image:latest ./
+        docker image build -f Dockerfile -t laussma/my-first-image:latest .
         docker tag laussma/my-first-image:latest laussma/my-first-image:$GIT_SHA
         docker push laussma/my-first-image:latest
         docker push laussma/my-first-image:$GIT-GIT_SHA
