--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,5 +23,6 @@ jobs:
 
     - name: Push the Docker image
       run: |
+        echo ${{ secrets.DOCKER_PWD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin      
         docker push laussma/my-first-image:latest
         docker push laussma/my-first-image:$GIT_SHA
