--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,6 @@ jobs:
     - name: Push the Docker image
       run: |
         echo ${{ secrets.DOCKER_PWD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin      
+        GIT_SHA="$(git rev-parse --short HEAD)"
         docker push laussma/my-first-image:latest
         docker push laussma/my-first-image:$GIT_SHA
